objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>Certificate_Version_Verified__c</fullName>
        <label>Delete: Certificate Version (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Version__c</fullName>
        <label>DELETE Certificate Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Signing Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Subs_Verif_Proc_Verified__c</fullName>
        <label>DELETCode Si Subs Verif Proc (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Signing_Subscriber_Verification_Pro__c</fullName>
        <defaultValue>&quot;Mozilla is no longer accepting requests to enable the Code Signing trust bit.&quot;</defaultValue>
        <label>DELETE Code Signing Subscriber Verif Pro</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Root_Case__c</fullName>
        <label>Comments by Mozilla on Root Case</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Constraints_on_External_SubCAs_RAs__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Describe constraints on external subordinate CAs and RAs.&quot; &amp; BR() &amp; 
&quot;As per section 5.3 of Mozilla&apos;s Root Store Policy, provide the required data for all of your non-technically-constrained subordinate CA certificates that chain up to this root certificate.&quot; &amp; BR()&amp;
&quot;This data may be provided as follows:&quot; &amp; BR() &amp;
&quot;- If your CA has access to the CCADB, then you may provide this information directly in the CCADB.&quot; &amp; BR() &amp;
&quot;- Otherwise, provide this information in your Bugzilla Bug.&quot; &amp; BR(), 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Constraints on External SubCAs &amp; RAs</inlineHelpText>
        <label>Constraints on External SubCAs &amp; RAs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Signed_by_another_Root_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently Cross-Signed by another Root Cert?</inlineHelpText>
        <label>Cross-Signed by another Root Cert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Signing_Verified__c</fullName>
        <label>Cross Signing (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Signing__c</fullName>
        <defaultValue>&quot;NEED:&quot; &amp; BR() &amp;
&quot;- List all other root certificates for which this root certificate has issued cross-signing certificates.&quot;  &amp; BR() &amp;
&quot;- List all other root certificates that have issued cross-signing certificates for this root certificate.&quot; &amp; BR() &amp; 
&quot;- If any such cross-signing relationships exist, it is important to note whether the cross-signing CAs&apos; certificates are already included in the Mozilla root store or not.&quot;</defaultValue>
        <label>DELETE Cross Signing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_of_PKI_Hierarchy__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: URL and/or Description of this PKI Hierarchy.&quot; &amp; BR() &amp;
&quot;Provide details related to any of the check-boxes above that are selected.&quot; &amp; BR() &amp; BR() &amp;
&quot;Add records for the existing intermediate certs to the CCADB as described here: https://ccadb.org/cas/intermediates#adding-intermediate-certificate-data&quot; &amp; BR() &amp; BR() &amp;
&quot;If Mozilla accepts and includes your root certificate, then we have to assume that we also accept any of your future sub-CAs and their sub-CAs. Therefore, the selection criteria for your sub-CAs and their sub-CAs will be a critical decision factor. As well as the documentation and auditing of operations requirements that you place on your sub-CAs and their sub-CAs.&quot; &amp; BR() &amp; BR() &amp;
&quot;If this root has any subordinate CA certificates that are operated by external third parties, then provide the information listed in the Subordinate CA Checklist in a separate document. https://wiki.mozilla.org/CA/Subordinate_CA_Checklist&quot; &amp; BR(), 
&quot;&quot;)</defaultValue>
        <inlineHelpText>URL or Description of Hierarchy. Provide details if any box checked</inlineHelpText>
        <label>Description of PKI Hierarchy</label>
        <length>1100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EKU_Client_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Client Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Document_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Document Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_OCSP_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - OCSP Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Secured_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Secured Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Server_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Server Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EKU_Time_Stamping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EKU - Time Stamping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date_Verified__c</fullName>
        <label>DELETE EV SSL Audit State Dt (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date__c</fullName>
        <label>DELETE EV SSL Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Type_Verified__c</fullName>
        <label>DELETE EV SSL Audit Type (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Audit_Type__c</fullName>
        <label>DELETE EV SSL Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WebTrust</fullName>
                </value>
                <value>
                    <fullName>ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>ETSI TS 102 042</fullName>
                </value>
                <value>
                    <fullName>Equivalent WebTrust</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI EN 319 411</fullName>
                </value>
                <value>
                    <fullName>Equivalent ETSI 102 042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Audit_Verified__c</fullName>
        <label>DELETE EV SSL Audit (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Audit__c</fullName>
        <defaultValue>&quot;NEED: If requesting EV treatment, then also need an EV audit as per Mozilla&apos;s Root Store Policy.&quot;</defaultValue>
        <label>DELETE EV SSL Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>EV Code Signing Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s_Verified__c</fullName>
        <label>DELETE EV Policy OID(s) (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: EV OID if requesting EV treatment for this root. Mozilla strongly recommends that CAs use the standard CA/Browser Forum EV OID (2.23.140.1.1).&quot;, 
&quot;&quot;)</defaultValue>
        <label>Mozilla EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>EV SSL Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Period_Dates_Verified__c</fullName>
        <label>DELETE V SSL Audit Period Dt (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Period_End_Date__c</fullName>
        <label>DELETE EV SSL Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Audit_Period_Start_Date__c</fullName>
        <label>DELETE EV SSL Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Verification_Proc_Verified__c</fullName>
        <label>DELETE EV SSL Verificat Proc (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_SSL_Verification_Procedures__c</fullName>
        <defaultValue>&quot;NEED: If EV verification is performed, then provide URLs and section/page number information pointing directly to the sections of the CP/CPS documents that pertain to EV and describe the procedures for verifying the ownership/control of the domain name, and the verification of identity, existence, and authority of the organization to request the EV certificate.&quot; &amp; BR() &amp; BR() &amp;
&quot;The EV verification documentation must meet the requirements of the CA/Browser Forum&apos;s EV Guidelines, and must also provide information specific to the CA&apos;s operations.&quot;</defaultValue>
        <label>DELETE EV SSL Verifi Procedures</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Tested_Verified__c</fullName>
        <label>DELETE EV Tested (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EV_Tested__c</fullName>
        <defaultValue>&quot;NEED: If EV treatment is being requested, then provide successful output from EV Testing as described here https://wiki.mozilla.org/PSM:EV_Testing_Easy_Version&quot;</defaultValue>
        <inlineHelpText>If you are requesting to enable EV treatment, then you must provide successful output from the EV-Readiness Checking Tool. See https://wiki.mozilla.org/PSM:EV_Testing_Easy_Version</inlineHelpText>
        <label>EV Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Addr_Verification_Proc_Verified__c</fullName>
        <label>DELETE Email Add Verifi Proc (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address_Verification_Procedures__c</fullName>
        <defaultValue>&quot;NEED if Email trust bit requested...&quot; &amp; BR() &amp;
&quot;Sections of CP/CPS that sufficiently describe the verification steps that are taken to confirm the ownership/control of the email address to be included in the cert.&quot;</defaultValue>
        <label>DELETE Email Add Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_EV_for_Code_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable EV for Code Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_EV_for_Server_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable EV for Server Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Example_Cert__c</fullName>
        <inlineHelpText>If applicable, URL to an S/MIME cert that chains up to the Root Certificate</inlineHelpText>
        <label>DELETE Example Cert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Explain why this root cert needs to be included in the root store, rather than being signed by another CA’s root certificate that is already included.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Explain why this root needs to be included in the selected root store</inlineHelpText>
        <label>Explanation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extended_Key_Usage__c</fullName>
        <label>Extended Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Externally_Operated_SubCAs_Verified__c</fullName>
        <label>DELETEExternally Oper SubCAs (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Externally_Operated_SubCAs__c</fullName>
        <defaultValue>&quot;NEED:&quot; &amp; BR() &amp;
&quot;- If this root has any subordinate CA certificates that are operated by external third parties, then provide the information listed in the Subordinate CA Checklist, https://wiki.mozilla.org/CA/Subordinate_CA_Checklist&quot; &amp; BR() &amp;
&quot;- If the CA functions as a super CA such their CA policies and auditing don&apos;t apply to the subordinate CAs, then those subordinate CAs must apply for inclusion themselves as separate trust anchors.&quot;</defaultValue>
        <label>DELETE Externally Operated SubCAs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Results__c</fullName>
        <label>Extraction Results</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_First_Included__c</fullName>
        <label>Firefox Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_External_Registration_Authorities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently has External Registration Authorities?</inlineHelpText>
        <label>Has External Registration Authorities?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Externally_Operated_SubCAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Currently has Externally Operated SubCAs?</inlineHelpText>
        <label>Has Externally Operated SubCAs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_Certificate_Name__c</fullName>
        <formula>Root_Certificate_Name_Existing__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Included Certificate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Audit Update Request&quot;,
&quot;1. In Edit mode, click on the &apos;Included Certificate&apos; search icon to select a root certificate that is covered by the audit statement(s).&quot; + BR() +
&quot;** Default list in Search shows recently viewed records. Be sure to enter the beginning of your cert name followed by asterisk (e.g. A*), and click on the &apos;Go!&apos; button.&quot; + BR() + 
&quot;2. Check the boxes corresponding to the audit statements that apply to the root certificate.&quot; + BR() + 
&quot;3. Provide the URLs to the test websites if the root certificate is trusted for TLS/SSL.&quot; + BR() + 
&quot;** If the root certificate is enabled for EV treatment, then the TLS/SSL certificates in the test websites must be EV. &quot; + BR() + 
&quot;4. Click &apos;Edit&apos; and &apos;Save&apos; buttons as needed to provide the information.&quot; + BR() + 
&quot;5. When finished, click on the &apos;Case No&apos; to go back to the Case page.&quot;,
 
&quot;1. Upon creation, enter the &apos;Root Certificate Name&apos;, then click on the &apos;Save&apos; button.&quot; + BR() + 
&quot;2. Click on the &apos;Add/Update PEM Info&apos; button and enter the PEM for the certificate to be included or updated.&quot; + BR() + 
&quot;3. In Edit mode, Check the boxes corresponding to the audit statements that apply to the root certificate, and provide the test websites if the root certificate is trusted for TLS/SSL.&quot; + BR() + 
&quot;** If the root certificate is enabled for EV treatment, then the TLS/SSL certificates in the test websites must be EV.&quot; + BR() + 
&quot;4. Click &apos;Edit&apos; and &apos;Save&apos; buttons as needed to provide the information.&quot; + BR() + 
&quot;5. When finished, click on the &apos;Case No&apos; to go back to the Case page.&quot;
)</defaultValue>
        <label>Instructions</label>
        <length>770</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuer__c</fullName>
        <inlineHelpText>Certificate Issuer Common Name + Certificate Issuer Organizational Unit + Certificate Issuer Organization + Certificate Issuer Country</inlineHelpText>
        <label>Issuer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Client_Authentication__c</fullName>
        <label>Justification - Client Authentication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Document_Signing__c</fullName>
        <label>Justification - Document Signing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_EV_for_Code_Signing__c</fullName>
        <label>Justification - EV for Code Signing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_EV_for_SSL__c</fullName>
        <label>Justification - EV for SSL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_OCSP_Signing__c</fullName>
        <label>Justification - OCSP Signing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Other__c</fullName>
        <label>Justification - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Secured_Email__c</fullName>
        <label>Justification - Secured Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Server_Authentication__c</fullName>
        <label>Justification - Server Authentication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification_Time_Stamping__c</fullName>
        <label>Justification - Time Stamping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Usage__c</fullName>
        <label>Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Management_Assertions_By_Verified__c</fullName>
        <label>DELETE Management Assert By (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management_Assertions_By__c</fullName>
        <label>DELETE Management Assertions By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft EV Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_EV_Policy_OID_s__c</fullName>
        <label>Microsoft EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microsoft_Request_Status__c</fullName>
        <label>Microsoft Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Microsoft_Status__c</fullName>
        <label>Microsoft Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included</fullName>
                    <default>true</default>
                    <label>Not Included</label>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>NotBefore</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>